# cidc-2

./: .gitignore  DOCUMENTATION_INDEX.md  ENHANCEMENT_COMPLETION_REPORT.md  EXECUTION_GUIDE.md  FASTAPI_QUICKSTART.md  FASTAPI_SUMMARY.md  PROJECT_COMPLETION_INDEX.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.py  README.md  README_FASTAPI.md  RF401_Updated August 17, 2024_Open Field Fill Form_fields.json  STATUS_DASHBOARD.py  Sample-Fillable-PDF_fields.json  fastapi_app.py  field_mapper.py  field_memory.json  integration_guide.py  knowledge_bases.py  pyproject.toml  requirements.txt  run_demo.py  sample_insurance.json  sample_medical.json  sample_real_estate.json  setup.py  source_data.json  step2_user_confirmation.py  step3_data_retrieval.py  step3_semantic_retrieval.py  step4_verify_fill.py  test_fastapi.py  validators.py
