[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-form-processor"
version = "1.0.0"
description = "Enhanced PDF form processing with semantic retrieval, domain knowledge, and validation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Development Team", email = "team@example.com"}
]
keywords = ["pdf", "forms", "extraction", "validation", "compliance", "semantic", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
nlp = [
    "spacy>=3.0.0",
    "nltk>=3.6.0",
]
transformers = [
    "transformers>=4.0.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
all = [
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "spacy>=3.0.0",
    "nltk>=3.6.0",
    "transformers>=4.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/yourusername/pdf-form-processor"
Documentation = "https://github.com/yourusername/pdf-form-processor/blob/main/DOCUMENTATION_INDEX.md"
Repository = "https://github.com/yourusername/pdf-form-processor.git"
"Bug Tracker" = "https://github.com/yourusername/pdf-form-processor/issues"

[tool.setuptools]
packages = ["pdf_form_processor"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
